compiler/tests/errortests/arithmetic/arithmetic-incomplete-lshift.txt
FILENAME:3:24: error: missing right hand side expression after 'left shift' operator
    let y : i32 = x << ;
                       ^
